<resources>
    <string name="app_name">Prueba</string>

    <string name="google_logo">Google Logo</string>
    <string name="sign_in">Sign in</string>
    <string name="use_your_google_account">Use your Google Account</string>
    <string name="email_or_phone">Email or phone</string>
    <string name="forgot_email">Forgot email?</string>
    <string name="not_your_computer_hint">Not your computer? Use Guest mode to sign in privately.</string>
    <string name="learn_more">Learn more about using Guest mode</string>
    <string name="next">Next</string>
    <string name="create_account">Create account</string>
</resources>